discussion/kv_engine/176365/176365_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-52264: Remove "max_size" configuration listener

The "max_size" configuration parameter determines the Bucket quota.
Currently when it is changed we update the HWM, LWM, and other
related values. The BucketQuotaChangeTask is going to own this
work in a future change, so in preparation for that remove the
configuration change listener and have it call the current function
directly.

Change-Id: I71b2950b8cfa3b837c89583ad1529361ffe7960f

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-06-24 12:05:47.000000000
Message: 
Uploaded patch set 4.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-06-24 12:48:21.000000000
Message: 
Patch Set 4: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47046/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47046/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18298/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_quota_change_task.h:31:43: error: use of undeclared identifier "INT_MAX" [clang-diagnostic-error]
                     /*initialSleepTime*/ INT_MAX,
                                          ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18298/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_quota_change_task.h:31:43:
error: use of undeclared identifier "INT_MAX" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18298/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39517/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/bucket_quota_change_task.h:31:43:
error: use of undeclared identifier "INT_MAX"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39517/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7968/ : FAILURE

Compile error at [2022-06-24T12:13:27.558Z] ../kv_engine/engines/ep/src/bucket_quota_change_task.h:31:43:
error: use of undeclared identifier "INT_MAX"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7968/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19385/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [4/93]: test dcp consumer flow control dynamic...../kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:1467 Test failed: `" (Expected `500000000", got `125829120" - Incorrect new size.)
[2022-06-24T12:23:37.770Z] (212 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19385/ )

Failure of GoogleTest "EphemeralOrPersistent/STItemPagerTest.ActiveEvictedIfReplicaEvictionInsufficient/persistent_couchstore_full_eviction":

<pre>
[ RUN      ] EphemeralOrPersistent/STItemPagerTest.ActiveEvictedIfReplicaEvictionInsufficient/persistent_couchstore_full_eviction
[2022-06-24T12:22:38.946Z] ../kv_engine/engines/ep/tests/module_tests/item_pager_test.cc:1326: Failure
[2022-06-24T12:22:38.946Z] Expected: (activeRR) < (100), actual: 100 vs 100
[2022-06-24T12:22:38.946Z] [  FAILED  ] EphemeralOrPersistent/STItemPagerTest.ActiveEvictedIfReplicaEvictionInsufficient/persistent_couchstore_full_eviction, where GetParam() = "bucket_type=persistent:backend=couchstore:item_eviction_policy=full_eviction" (8966 ms)
EphemeralOrPersistent/STItemPagerTest.ActiveEvictedIfReplicaEvictionInsufficient/persistent_couchstore_full_eviction
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19385/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20515/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [4/93]: test dcp consumer flow control dynamic...../kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:1488 Test failed: `" (Expected `2000000000", got `500000000" - Incorrect new size.)
[2022-06-24T12:33:37.338Z] (151 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20515/ )

Timeout of a CTest test [2022-06-24T12:40:39.381Z] 446/446 Test #205: ep-engine_ep_unit_tests.EphemeralOrPersistent/EPEngineParamTest .........................................} ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20515/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20169/ : FAILURE

Compile error at [2022-06-24T12:25:10.414Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore_config.h:17:10:
fatal error: libmagma/magma.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20169/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21163/ : FAILURE

ThreadSanitizer issue: data race /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/daemon/cookie.cc:209 in Cookie::getRequest() const  ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21163/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/17423/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28546/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8069/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
